migrated to db usage for sectors, updated sectors to 7.0 + Timelines, refactoring